--- a/conf/app.conf
+++ b/conf/app.conf
@@ -205,3 +205,7 @@ log.crit.output = log/%(app.name)-critical.json # Log all critical to file
 # Example:
 #   log.request.output = %(app.name)s-request.json
 log.request.output = log/%(app.name)s-requests.json
+
+db.driver             = mymysql
+db.import             = github.com/ziutek/mymysql/mysql
+db.spec               = "tcp:localhost:3306*wallet/root/root"
