gorm with model controller

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -206,6 +206,13 @@ log.crit.output = log/%(app.name)-critical.json # Log all critical to file
 #   log.request.output = %(app.name)s-request.json
 log.request.output = log/%(app.name)s-requests.json
 
-db.driver             = mymysql
-db.import             = github.com/ziutek/mymysql/mysql
-db.spec               = "tcp:localhost:3306*wallet/root/root"
+db.driver = mysql
+db.protocol = tcp
+db.hostname = 127.0.0.1
+db.port = 3306
+db.username = root
+db.password = root
+db.database_name = "waller"
+db.timezone = "Asia/Bangkok"
+db.charset = utf8
+db.collation = utf8_bin
