add mysql and phpmyadmin

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -208,10 +208,10 @@ log.request.output = log/%(app.name)s-requests.json
 
 db.driver = mysql
 db.protocol = tcp
-db.hostname = 127.0.0.1
+db.hostname = db
 db.port = 3306
-db.username = root
-db.password = root
+db.username = waller
+db.password = pxSeEAZ4E
 db.database_name = "waller"
 db.timezone = "Asia/Bangkok"
 db.charset = utf8
