--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build: ./
     ports:
       - 80:9000
+    volumes:
+      - type: bind
+        source: ./
+        target: /go/src/omise-go
     links:
       - db
     command: revel run omise-go
