--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/aofiee/Omise-Go-Example
+package: Omise-Go-Example
 import:
 - package: github.com/jinzhu/gorm
   version: ^1.0.0
