--- a/conf/app.conf
+++ b/conf/app.conf
@@ -105,7 +105,16 @@ module.static = github.com/revel/modules/static
 # This section is evaluated when running Revel in dev mode. Like so:
 #   `revel run path/to/myapp`
 [dev]
-
+db.driver = mysql
+db.protocol = tcp
+db.hostname = db
+db.port = 3306
+db.username = waller
+db.password = pxSeEAZ4E
+db.database_name = "waller"
+db.timezone = "Asia/Bangkok"
+db.charset = utf8
+db.collation = utf8_bin
 # This sets `revel.DevMode` for use in-app.
 # Example:
 #   `if revel.DevMode {...}`
