--- a/conf/app.conf
+++ b/conf/app.conf
@@ -107,8 +107,8 @@ module.static = github.com/revel/modules/static
 [dev]
 db.driver = mysql
 db.protocol = tcp
-# db.hostname = db
-db.hostname = localhost
+db.hostname = db
+# db.hostname = localhost
 db.port = 3306
 db.username = waller
 db.password = pxSeEAZ4E
@@ -218,8 +218,8 @@ log.request.output = log/%(app.name)s-requests.json
 
 db.driver = mysql
 db.protocol = tcp
-# db.hostname = db
-db.hostname = localhost
+db.hostname = db
+# db.hostname = localhost
 db.port = 3306
 db.username = waller
 db.password = pxSeEAZ4E
